<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTextPopup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSubTitle"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_product_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_id"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/tv_productId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_id"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_name"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/ut_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_hint"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_weight"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/ut_product_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_weight_hint"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_price"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/ut_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_description"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/ut_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_hint"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/product_availability"
                android:textColor="@color/colorPrimaryDark"/>

            <Spinner
                android:id="@+id/sp_Availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_updateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/update_product_title"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:onClick="updateProduct"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>